--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -110,7 +110,9 @@ img {
    background-color: #112031;
    border-color: #345B63;
 }
-
+.btn:hover {
+   background-color: #152D35;
+}
 
 footer {
    background-color: #152D35;
